@@ -1,3 +1,7 @@
+2001-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-hist.el (w3m-history-forward): New function.
+
 2001-03-24  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
 	* w3m.el (w3m-goto-url): Put cursor at the top of minibuffer.
